--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <h1>
-            Hello World
+            Hey cutie ;)
         </h1>
-        <a href="" class="btn btn-primary">Click Me</a>
+        <a href="" class="btn btn-primary">Click Me if you got a booty</a>
     </div>
     <script src="src/app.js"></script>
 </body>
