--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <h1>
             Hey cutie ;)
         </h1>
-        <a href="" class="btn btn-primary">Click Me if you got a booty</a>
+
+        <button>Click me if you got a booty</button>
+
     </div>
     <script src="src/app.js"></script>
 </body>
