added HTML structure

--- a/index.html
+++ b/index.html
@@ -11,12 +11,43 @@
 
 <body>
     <div class="container">
-        <h1>
-            Hey cutie ;)
-        </h1>
+        <div class="weather-app">
+            <h1>New York
+            </h1>
+            <ul>
+                <li>
+                    Friday 5:00
+                </li>
+                <li>
+                    clear
+                </li>
+            </ul>
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear" /> 52°F | 11°C
+                </div>
+                <div class="col-md-6">
+                    <ul>
+                        <li>
+                            Precipitation: 0%
+                        </li>
+                        <li>
+                            Humidity: 73%
+                        </li>
+                        <li>
+                            Wind: 2 km/hr
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
-        <button>Click me if you got a booty</button>
-
+        <small>
+<a href="https://github.com/csleal694/Vanill-Weather-Apple"
+target="_blank"
+>Open-source code</a>
+by Cynthia Leal
+        </small>
     </div>
     <script src="src/app.js"></script>
 </body>
