--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
 </head>
 
 <body>
     <div class="container">
         <div class="weather-app">
-            <h1>New York
+            <h1>
+                New York
             </h1>
             <ul>
                 <li>
@@ -23,10 +25,10 @@
                 </li>
             </ul>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-6">
                     <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear" /> 52°F | 11°C
                 </div>
-                <div class="col-md-6">
+                <div class="col-6">
                     <ul>
                         <li>
                             Precipitation: 0%
@@ -40,14 +42,14 @@
                     </ul>
                 </div>
             </div>
-        </div>
 
-        <small>
+            <small>
 <a href="https://github.com/csleal694/Vanill-Weather-Apple"
 target="_blank"
 >Open-source code</a>
 by Cynthia Leal
         </small>
+        </div>
     </div>
     <script src="src/app.js"></script>
 </body>
