--- a/index.html
+++ b/index.html
@@ -12,34 +12,44 @@
 
 <body>
     <div class="container">
-        <div class="weather-app">
-            <h1>
-                New York
-            </h1>
-            <ul>
-                <li>
-                    Friday 5:00
-                </li>
-                <li>
-                    clear
-                </li>
-            </ul>
-            <div class="row">
-                <div class="col-6">
-                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear" /> 52°F | 11°C
-                </div>
-                <div class="col-6">
+        <div class="weather-app-wrapper">
+            <div class="weather-app">
+                <div class="overview">
+
+                    <h1>
+                        New York
+                    </h1>
                     <ul>
                         <li>
-                            Precipitation: 0%
+                            Friday 5:00
                         </li>
                         <li>
-                            Humidity: 73%
-                        </li>
-                        <li>
-                            Wind: 2 km/hr
+                            clear
                         </li>
                     </ul>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="clearfix weather-temperature">
+                            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="clear" class="float-left" />
+                            <div class="float-left">
+                                <strong>52</strong><span class="units">°F | <a href="#">°C</a></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <ul>
+                            <li>
+                                Precipitation: 0%
+                            </li>
+                            <li>
+                                Humidity: 73%
+                            </li>
+                            <li>
+                                Wind: 2 km/hr
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
