--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
 </head>
@@ -16,15 +17,13 @@
             <div class="weather-app">
                 <div class="overview">
 
-                    <h1>
-                        New York
-                    </h1>
+                    <h1 id="city"></h1>
                     <ul>
                         <li>
                             Friday 5:00
                         </li>
-                        <li>
-                            clear
+                        <li id="description">
+
                         </li>
                     </ul>
                 </div>
@@ -33,21 +32,18 @@
                         <div class="clearfix weather-temperature">
                             <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="clear" class="float-left" />
                             <div class="float-left">
-                                <strong>52</strong><span class="units">°F | <a href="#">°C</a></span>
+
+                                <strong id="temperature">52</strong><span class="units">°F | <a href="#">°C</a></span>
+
                             </div>
                         </div>
                     </div>
                     <div class="col-6">
                         <ul>
                             <li>
-                                Precipitation: 0%
-                            </li>
+                                Humidity: <span id="humidity"></span>%</li>
                             <li>
-                                Humidity: 73%
-                            </li>
-                            <li>
-                                Wind: 2 km/hr
-                            </li>
+                                Wind: <span id="wind"></span> km/hr</li>
                         </ul>
                     </div>
                 </div>
