Update the time

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 
                     <h1 id="city"></h1>
                     <ul>
-                        <li>
-                            Friday 5:00
+                        <li>Last update: <span id="date"></span>
                         </li>
                         <li id="description">
 
