--- a/index.html
+++ b/index.html
@@ -16,28 +16,23 @@
         <div class="weather-app-wrapper">
             <div class="weather-app">
                 <div class="overview">
-
                     <h1 id="city"></h1>
                     <ul>
-                        <li>Last update: <span id="date"></span>
-                        </li>
-                        <li id="description">
-
-                        </li>
+                        <li>Last update:<span id="date"></span></li>
+                        <li id="description"></li>
                     </ul>
                 </div>
                 <div class="row">
                     <div class="col-6">
                         <div class="clearfix weather-temperature">
-                            <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="clear" class="float-left" />
-                            <div class="float-left">
+                            <img src="" alt="clear" id="icon" class="float-left" />
+                            <div class="float-left ">
 
-                                <strong id="temperature">52</strong><span class="units">°F | <a href="#">°C</a></span>
-
+                                <strong id="temperature"></strong><span class="units ">°F | <a href="#">°C</a></span>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 ">
                         <ul>
                             <li>
                                 Humidity: <span id="humidity"></span>%</li>
@@ -49,14 +44,14 @@
             </div>
 
             <small>
-<a href="https://github.com/csleal694/Vanill-Weather-Apple"
-target="_blank"
+<a href="https://github.com/csleal694/Vanill-Weather-Apple "
+target="_blank "
 >Open-source code</a>
 by Cynthia Leal
         </small>
         </div>
     </div>
-    <script src="src/app.js"></script>
+    <script src="src/app.js "></script>
 </body>
 
 </html>
