--- a/index.html
+++ b/index.html
@@ -15,29 +15,39 @@
     <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">
-                <div class="overview">
-                    <h1 id="city"></h1>
+                <form id="search-form" class="mb-3">
+                    <div class="row">
+                        <div class="col-9">
+                            <input type="search" placeholder="Type a city..." class="form-control" id="city-input" autocomplete="off" />
+                        </div>
+                        <div class=" col-3 ">
+                            <input type="submit " value="Search " class="btn btn-primary w-100 " />
+                        </div>
+                    </div>
+                </form>
+                <div class="overview ">
+                    <h1 id="city "></h1>
                     <ul>
-                        <li>Last update:<span id="date"></span></li>
-                        <li id="description"></li>
+                        <li>Last update:<span id="date "></span></li>
+                        <li id="description "></li>
                     </ul>
                 </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="clearfix weather-temperature">
-                            <img src="" alt="clear" id="icon" class="float-left" />
+                <div class="row ">
+                    <div class="col-6 ">
+                        <div class="clearfix weather-temperature ">
+                            <img src=" " alt="clear " id="icon " class="float-left " />
                             <div class="float-left ">
 
-                                <strong id="temperature"></strong><span class="units ">°F | <a href="#">°C</a></span>
+                                <strong id="temperature "></strong><span class="units ">°F | <a href="# ">°C</a></span>
                             </div>
                         </div>
                     </div>
                     <div class="col-6 ">
                         <ul>
                             <li>
-                                Humidity: <span id="humidity"></span>%</li>
+                                Humidity: <span id="humidity "></span>%</li>
                             <li>
-                                Wind: <span id="wind"></span> km/hr</li>
+                                Wind: <span id="wind "></span> km/hr</li>
                         </ul>
                     </div>
                 </div>
