--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Weather App</title>
+    <script src="https://kit.fontawesome.com/5301b5dfe0.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="src/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+
     <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">
@@ -37,8 +44,8 @@
                         <div class="clearfix weather-temperature">
                             <img src="" alt="clear" id="icon" class="float-left" />
                             <div class="float-left">
-
-                                <strong id="temperature"></strong><span class="units"><a href="#" id="celsius-link" class="active">°C</a>| <a href="#" id="fahrenheit-link">°F</a></span>
+                                <div></div>
+                                <strong id="temperature"></strong><span class="units"><a href="#" id="celsius-link" class="a">°C</a>| <a href="#" id="fahrenheit-link">°F</a></span>
                             </div>
                         </div>
                     </div>
@@ -48,20 +55,61 @@
                                 Humidity: <span id="humidity"></span>%</li>
                             <li>
                                 Wind: <span id="wind"></span> km/hr</li>
+                            <li>
+                                Precipitation: <span id="precipitation"></span>%</li>
                         </ul>
                     </div>
                 </div>
             </div>
+            <h5></h5>
 
-            <small>
-<a href="https://github.com/csleal694/Vanill-Weather-Apple"
-target="_blank"
->Open-source code</a>
-by Cynthia Leal
-        </small>
-        </div>
-    </div>
-    <script src="src/app.js"></script>
+
+            </main>
+            <br/>
+            <form>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-3">
+                            <p> Mon
+                                <br/>
+                                <img src="" alt="clear" id="icon" class="float-left" />
+                                <br/> 30°C | 98°F
+                            </p>
+                        </div>
+                        <div class="col-3">
+                            <p1>
+                                Tues
+                                <br/>
+                                <i class="fas fa-cloud-sun"></i>
+                                <br/> 15°C | 42°F
+                            </p1>
+                        </div>
+                        <div class="col-3">
+                            <p2>
+                                Wed
+                                <br/>
+                                <i class="fas fa-cloud-moon-rain"></i>
+                                <br/> 1°C | 11°F
+                            </p2>
+                        </div>
+                        <div class="col-3">
+                            <p3>
+                                Thurs
+                                <br/>
+                                <i class="fas fa-snowman"></i>
+                                <br/> -4°C | 12°F
+                            </p3>
+                        </div>
+
+                        <script src="src/app.js"></script>
+
+                    </div>
+                </div>
+            </form>
+            <p6>
+                <a href="https://github.com/csleal694/Weather_Leal_App">Open-source code</a> <span>by Cynthia Leal </span>
+            </p6>
 </body>
 
 </html>
