updated icon in days of the week

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                                 Humidity: <span id="humidity"></span>%</li>
                             <li>
                                 Wind: <span id="wind"></span> km/hr</li>
-                            <li>
-                                Precipitation: <span id="precipitation"></span>%</li>
+
                         </ul>
                     </div>
                 </div>
@@ -73,7 +72,7 @@
                         <div class="col-3">
                             <p> Mon
                                 <br/>
-                                <img src="" alt="clear" id="icon" class="float-left" />
+                                <i class="fas fa-cloud-sun"></i>
                                 <br/> 30°C | 98°F
                             </p>
                         </div>
