--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <div class="col-9">
                             <input type="search" placeholder="Type a city..." class="form-control" id="city-input" autocomplete="off" />
                         </div>
-                        <div class=" col-3">
+                        <div class="col-3">
                             <input type="submit" value="Search" class="btn btn-primary w-100" />
                         </div>
                     </div>
@@ -42,10 +42,11 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="clearfix weather-temperature">
-                            <img src="" alt="clear" id="icon" class="float-left" />
-                            <div class="float-left">
-                                <div></div>
-                                <strong id="temperature"></strong><span class="units"><a href="#" id="celsius-link" class="a">°C</a>| <a href="#" id="fahrenheit-link">°F</a></span>
+                            <div class="temp-div">
+                                <img src="http://openweathermap.org/img/wn/01n@2x.png" alt="clear" id="icon" class="float-left" />
+                                <strong id="temperature"></strong>
+                                <span class="units">
+                                    <a href="#" id="celsius-link" class="a">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
                             </div>
                         </div>
                     </div>
