added weather forecast HTML- wrapped elements into classes

--- a/index.html
+++ b/index.html
@@ -68,48 +68,76 @@
             <br/>
             <form>
 
-                <div class="container">
+                <div class="weather-forecast">
                     <div class="row">
                         <div class="col-3">
-                            <p> Mon
-                                <br/>
-                                <i class="fas fa-cloud-sun"></i>
-                                <br/> 30°C | 98°F
+                            <div class="weather-forecast-date"> Mon</div>
+                            <img src="" alt="" width="40" />
+                            <i class="fas fa-cloud-sun"></i>
+
                             </p>
-                        </div>
-                        <div class="col-3">
-                            <p1>
-                                Tues
-                                <br/>
-                                <i class="fas fa-cloud-sun"></i>
-                                <br/> 15°C | 42°F
-                            </p1>
-                        </div>
-                        <div class="col-3">
-                            <p2>
-                                Wed
-                                <br/>
-                                <i class="fas fa-cloud-moon-rain"></i>
-                                <br/> 1°C | 11°F
-                            </p2>
-                        </div>
-                        <div class="col-3">
-                            <p3>
-                                Thurs
-                                <br/>
-                                <i class="fas fa-snowman"></i>
-                                <br/> -4°C | 12°F
-                            </p3>
+                            <div class="weather-forecast-temperatures">
+                                <span class="weather-forecast-temperature-max">
+                                    30°</span>
+                                <span class="weather-forecast-temperature-min">
+                                        12°</span>
+                            </div>
                         </div>
 
-                        <script src="src/app.js"></script>
 
+                        <div class="col-3">
+                            <div class="weather-forecast-date"> Tue</div>
+                            <img src="" alt="" width="40" />
+                            <i class="fas fa-cloud-sun"></i>
+
+                            </p>
+                            <div class="weather-forecast-temperatures">
+                                <span class="weather-forecast-temperature-max">
+                                    30°</span>
+                                <span class="weather-forecast-temperature-min">
+                                        12°</span>
+                            </div>
+                        </div>
+
+                        <div class="col-3">
+                            <div class="weather-forecast-date"> Wed</div>
+                            <img src="" alt="" width="40" />
+                            <i class="fas fa-cloud-sun"></i>
+
+                            </p>
+                            <div class="weather-forecast-temperatures">
+                                <span class="weather-forecast-temperature-max">
+                                    30°</span>
+                                <span class="weather-forecast-temperature-min">
+                                        12°</span>
+                            </div>
+                        </div>
+
+                        <div class="col-3">
+                            <div class="weather-forecast-date"> Thur</div>
+                            <img src="" alt="" width="40" />
+                            <i class="fas fa-cloud-sun"></i>
+
+                            </p>
+                            <div class="weather-forecast-temperatures">
+                                <span class="weather-forecast-temperature-max">
+                                    30°</span>
+                                <span class="weather-forecast-temperature-min">
+                                        12°</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </form>
-            <p6>
-                <a href="https://github.com/csleal694/Weather_Leal_App">Open-source code</a> <span>by Cynthia Leal </span>
-            </p6>
+        </div>
+
+        <script src="src/app.js"></script>
+
+    </div>
+    </div>
+    </form>
+    <p6>
+        <a href="https://github.com/csleal694/Weather_Leal_App">Open-source code</a> <span>by Cynthia Leal </span>
+    </p6>
 </body>
 
 </html>
