--- a/index.html
+++ b/index.html
@@ -68,69 +68,56 @@
             <br/>
             <form>
 
-                <div class="weather-forecast">
-                    <div class="row">
-                        <div class="col-3">
-                            <div class="weather-forecast-date"> Mon</div>
-                            <img src="" alt="" width="40" />
-                            <i class="fas fa-cloud-sun"></i>
+                <div class="weather-forecast" id="forecast">
 
-                            </p>
-                            <div class="weather-forecast-temperatures">
-                                <span class="weather-forecast-temperature-max">
+
+
+                    <div class="col-3">
+                        <div class="weather-forecast-date"> Tue</div>
+                        <img src="" alt="" width="40" />
+                        <i class="fas fa-cloud-sun"></i>
+
+                        </p>
+                        <div class="weather-forecast-temperatures">
+                            <span class="weather-forecast-temperature-max">
                                     30°</span>
-                                <span class="weather-forecast-temperature-min">
+                            <span class="weather-forecast-temperature-min">
                                         12°</span>
-                            </div>
                         </div>
+                    </div>
 
+                    <div class="col-3">
+                        <div class="weather-forecast-date"> Wed</div>
+                        <img src="" alt="" width="40" />
+                        <i class="fas fa-cloud-sun"></i>
 
-                        <div class="col-3">
-                            <div class="weather-forecast-date"> Tue</div>
-                            <img src="" alt="" width="40" />
-                            <i class="fas fa-cloud-sun"></i>
-
-                            </p>
-                            <div class="weather-forecast-temperatures">
-                                <span class="weather-forecast-temperature-max">
+                        </p>
+                        <div class="weather-forecast-temperatures">
+                            <span class="weather-forecast-temperature-max">
                                     30°</span>
-                                <span class="weather-forecast-temperature-min">
+                            <span class="weather-forecast-temperature-min">
                                         12°</span>
-                            </div>
                         </div>
+                    </div>
 
-                        <div class="col-3">
-                            <div class="weather-forecast-date"> Wed</div>
-                            <img src="" alt="" width="40" />
-                            <i class="fas fa-cloud-sun"></i>
+                    <div class="col-3">
+                        <div class="weather-forecast-date"> Thur</div>
+                        <img src="" alt="" width="40" />
+                        <i class="fas fa-cloud-sun"></i>
 
-                            </p>
-                            <div class="weather-forecast-temperatures">
-                                <span class="weather-forecast-temperature-max">
+                        </p>
+                        <div class="weather-forecast-temperatures">
+                            <span class="weather-forecast-temperature-max">
                                     30°</span>
-                                <span class="weather-forecast-temperature-min">
+                            <span class="weather-forecast-temperature-min">
                                         12°</span>
-                            </div>
-                        </div>
-
-                        <div class="col-3">
-                            <div class="weather-forecast-date"> Thur</div>
-                            <img src="" alt="" width="40" />
-                            <i class="fas fa-cloud-sun"></i>
-
-                            </p>
-                            <div class="weather-forecast-temperatures">
-                                <span class="weather-forecast-temperature-max">
-                                    30°</span>
-                                <span class="weather-forecast-temperature-min">
-                                        12°</span>
-                            </div>
                         </div>
                     </div>
                 </div>
         </div>
+    </div>
 
-        <script src="src/app.js"></script>
+    <script src="src/app.js"></script>
 
     </div>
     </div>
