Display the forecast data using the API

--- a/index.html
+++ b/index.html
@@ -56,75 +56,18 @@
                                 Humidity: <span id="humidity"></span>%</li>
                             <li>
                                 Wind: <span id="wind"></span> km/hr</li>
-
                         </ul>
                     </div>
                 </div>
-            </div>
-            <h5></h5>
-
-
-            </main>
-            <br/>
-            <form>
-
                 <div class="weather-forecast" id="forecast">
-
-
-
-                    <div class="col-3">
-                        <div class="weather-forecast-date"> Tue</div>
-                        <img src="" alt="" width="40" />
-                        <i class="fas fa-cloud-sun"></i>
-
-                        </p>
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max">
-                                    30°</span>
-                            <span class="weather-forecast-temperature-min">
-                                        12°</span>
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="weather-forecast-date"> Wed</div>
-                        <img src="" alt="" width="40" />
-                        <i class="fas fa-cloud-sun"></i>
-
-                        </p>
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max">
-                                    30°</span>
-                            <span class="weather-forecast-temperature-min">
-                                        12°</span>
-                        </div>
-                    </div>
-
-                    <div class="col-3">
-                        <div class="weather-forecast-date"> Thur</div>
-                        <img src="" alt="" width="40" />
-                        <i class="fas fa-cloud-sun"></i>
-
-                        </p>
-                        <div class="weather-forecast-temperatures">
-                            <span class="weather-forecast-temperature-max">
-                                    30°</span>
-                            <span class="weather-forecast-temperature-min">
-                                        12°</span>
-                        </div>
-                    </div>
                 </div>
+            </div>
+            <small>
+     <a href="https://github.com/csleal694/Weather_Leal_App">Open-source code</a> <span>by Cynthia Leal </span>
+</small>
         </div>
     </div>
-
     <script src="src/app.js"></script>
-
-    </div>
-    </div>
-    </form>
-    <p6>
-        <a href="https://github.com/csleal694/Weather_Leal_App">Open-source code</a> <span>by Cynthia Leal </span>
-    </p6>
 </body>
 
 </html>
