Removed temperature conversion- only shows imperial units now.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                             <div class="temp-div">
                                 <img src="http://openweathermap.org/img/wn/01n@2x.png" alt="clear" id="icon" class="float-left" />
                                 <strong id="temperature"></strong>
-                                <span class="units">
-                                    <a href="#" id="celsius-link" class="a">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
+                                <span class="units">°F</span>
                             </div>
                         </div>
                     </div>
@@ -55,7 +54,7 @@
                             <li>
                                 Humidity: <span id="humidity"></span>%</li>
                             <li>
-                                Wind: <span id="wind"></span> km/hr</li>
+                                Wind: <span id="wind"></span> m/hr</li>
                         </ul>
                     </div>
                 </div>
