--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                             <div class="temp-div">
                                 <img src="http://openweathermap.org/img/wn/01n@2x.png" alt="clear" id="icon" class="float-left" />
                                 <strong id="temperature"></strong>
-                                <span class="units">°F</span>
+                                <span class="units">
+                                    <a href="#" id="celsius-link" class="a">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
                             </div>
                         </div>
                     </div>
@@ -54,7 +55,7 @@
                             <li>
                                 Humidity: <span id="humidity"></span>%</li>
                             <li>
-                                Wind: <span id="wind"></span> m/hr</li>
+                                Wind: <span id="wind"></span> km/hr</li>
                         </ul>
                     </div>
                 </div>
