rearranged html order

--- a/index.html
+++ b/index.html
@@ -18,39 +18,39 @@
 </head>
 
 <body>
+    <li>
+        <div class="container">
+            <div class="weather-app-wrapper">
+                <div class="weather-app">
+                    <div class="overview">
+                        <div class="row">
+                            <div class="col-6">
+                                <strong> <h1 id="city"></h1> </strong>
+                                <ul>
+                                    <li id="description"></li>
 
-    <div class="container">
-        <div class="weather-app-wrapper">
-            <div class="weather-app">
-                <form id="search-form" class="mb-3">
-                    <div class="row">
-                        <div class="col-9">
-                            <input type="search" placeholder="Type a city..." class="form-control" id="city-input" autocomplete="off" />
-                        </div>
-                        <div class="col-3">
-                            <input type="submit" value="Search" class="btn btn-primary w-100" />
-                        </div>
-                    </div>
-                </form>
-                <div class="overview">
-                    <h1 id="city"></h1>
-                    <ul>
-                        <li>Last update:<span id="date"></span></li>
-                        <li id="description"></li>
-                    </ul>
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="clearfix weather-temperature">
-                            <div class="temp-div">
-                                <img src="http://openweathermap.org/img/wn/01n@2x.png" alt="clear" id="icon" class="float-left" />
-                                <strong id="temperature"></strong>
-                                <span class="units">
-                                    <a href="#" id="celsius-link" class="a">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 ">
+                    <div class="temp-div">
+                        <img src="http://openweathermap.org/img/wn/01n@2x.png" alt="clear" id="icon" class="float-left" />
+                        <strong id="temperature"></strong>
+                        <span class="units">
+                                    <a href="#" id="celsius-link" class="a">°C</a> | <a href="#" id="fahrenheit-link">°F</a></span>
+                    </div>
+                    <form id="search-form" class="mb-3">
+                        <div class="row">
+                            <div class="col-6">
+                                <input type="search" placeholder="Type a city..." class="form-control w-40" id="city-input" autocomplete="off" />
+                                <div class="col-1"></div>
+                                <span><input type="submit" value="Search" class="btn btn-primary w-20" /></span>
+                                <h2>Last update: <span id="date"></h2></span>
+                            </div>
+                        </div>
+                    </form>
+
+                    <div class="col-10">
                         <ul>
                             <li>
                                 Humidity: <span id="humidity"></span>%</li>
@@ -62,12 +62,15 @@
                 <div class="weather-forecast" id="forecast">
                 </div>
             </div>
-            <small>
-     <a href="https://github.com/csleal694/Weather_Leal_App">Open-source code</a> <span>by Cynthia Leal </span>
+        </div>
+        <small>
+     <a href="https://github.com/csleal694/Weather_Leal_App">Open-source code</a><span>by Cynthia Leal </span>
 </small>
         </div>
-    </div>
-    <script src="src/app.js"></script>
+        </div>
+        </div>
+
+        <script src="src/app.js"></script>
 </body>
 
 </html>
